--- a/.github/ISSUE_TEMPLATE/이슈-생성-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/이슈-생성-템플릿.md
@@ -1,7 +1,7 @@
 ---
 name: 이슈 생성 템플릿
 about: Describe this issue template's purpose here.
-title: ''
+title: "[TAG] 이슈 이름"
 labels: ''
 assignees: ''
 
